<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddGroupFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/addnewGroup"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/editText_groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/Title"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Group Name" />

    <Button
        android:id="@+id/button_addQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_groupName"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:text="@string/addQuestion" />

    <LinearLayout
        android:id="@+id/questionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_addQuestion"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        android:padding="10dp"
       />

    <Button
        android:id="@+id/button_addGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addGroup"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/button_addQuestion"
        android:layout_marginTop="200dp"
        />

</FrameLayout>